@@ -18,35 +18,43 @@ package com.echothree.control.user.accounting.server.command;
 
 import com.echothree.control.user.accounting.common.form.GetCurrenciesForm;
 import com.echothree.control.user.accounting.common.result.AccountingResultFactory;
-import com.echothree.control.user.accounting.common.result.GetCurrenciesResult;
 import com.echothree.model.control.accounting.server.control.AccountingControl;
 import com.echothree.model.data.accounting.server.entity.Currency;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetCurrenciesCommand
-        extends BaseMultipleEntitiesCommand<Currency, GetCurrenciesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<Currency, GetCurrenciesForm> {
     
     // No COMMAND_SECURITY_DEFINITION, anyone may execute this command.
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetCurrenciesCommand */
     public GetCurrenciesCommand(UserVisitPK userVisitPK, GetCurrenciesForm form) {
         super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
+    @Override
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        var accountingControl = Session.getModelController(AccountingControl.class);
+
+        return accountingControl.countCurrencies();
+    }
+
     @Override
     protected Collection<Currency> getEntities() {
         var accountingControl = Session.getModelController(AccountingControl.class);
@@ -56,7 +64,7 @@ public class GetCurrenciesCommand
     
     @Override
     protected BaseResult getResult(Collection<Currency> entities) {
-        GetCurrenciesResult result = AccountingResultFactory.getGetCurrenciesResult();
+        var result = AccountingResultFactory.getGetCurrenciesResult();
         var accountingControl = Session.getModelController(AccountingControl.class);
         
         result.setCurrencies(accountingControl.getCurrencyTransfers(getUserVisit(), entities));
