@@ -17,7 +17,6 @@
 package com.echothree.control.user.queue.server.command;
 
 import com.echothree.control.user.queue.common.form.GetQueueTypesForm;
-import com.echothree.control.user.queue.common.result.GetQueueTypesResult;
 import com.echothree.control.user.queue.common.result.QueueResultFactory;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.queue.server.control.QueueControl;
@@ -25,40 +24,48 @@ import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.queue.server.entity.QueueType;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.model.data.user.server.entity.UserVisit;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetQueueTypesCommand
-        extends BaseMultipleEntitiesCommand<QueueType, GetQueueTypesForm> {
-    
+        extends BasePaginatedMultipleEntitiesCommand<QueueType, GetQueueTypesForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.QueueType.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetQueueTypesCommand */
     public GetQueueTypesCommand(UserVisitPK userVisitPK, GetQueueTypesForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
+    }
+
+    @Override
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        var queueControl = Session.getModelController(QueueControl.class);
+
+        return queueControl.countQueueTypes();
     }
 
     @Override
@@ -70,11 +77,13 @@ public class GetQueueTypesCommand
 
     @Override
     protected BaseResult getResult(Collection<QueueType> entities) {
-        GetQueueTypesResult result = QueueResultFactory.getGetQueueTypesResult();
-        var queueControl = Session.getModelController(QueueControl.class);
-        UserVisit userVisit = getUserVisit();
+        var result = QueueResultFactory.getGetQueueTypesResult();
 
-        result.setQueueTypes(queueControl.getQueueTypeTransfers(userVisit, entities));
+        if(entities != null) {
+            var queueControl = Session.getModelController(QueueControl.class);
+
+            result.setQueueTypes(queueControl.getQueueTypeTransfers(getUserVisit(), entities));
+        }
 
         return result;
     }
